<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.cdac.moviestageone.MovieDetailActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="6dp"
        app:cardBackgroundColor="@color/cardview_shadow_end_color"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true"
        tools:ignore="PrivateResource">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/linearLayout2_padding">


            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/textView_padding"
                android:text="@string/moviDetail_textView1"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.071" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/textView_padding"
                android:text="@string/moviDetail_textView2"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1"
                tools:layout_editor_absoluteX="175dp"
                tools:layout_editor_absoluteY="76dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/textView_padding"
                android:text="@string/moviDetail_textView3"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:layout_editor_absoluteX="175dp"
                tools:layout_editor_absoluteY="114dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@color/colorAccent"
                android:contentDescription="@string/moviDetail_ImageView"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="62dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/textView_padding"
                android:text="@string/moviDetail_textView4"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                tools:layout_editor_absoluteX="175dp"
                tools:layout_editor_absoluteY="155dp" />


        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>
